hphp/test/slow/sealed/sealed_methods_2.php.expectf
Fatal error: Cannot use unstable feature: `sealed_methods` in %s/sealed_methods_2.php on line 7
